2016-12-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch:
	Use "issue@texjp.org" as bug_email in usagehelp().

2016-12-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* uptexextra.h: Use "issue@texjp.org" as BUG_ADDRESS.

2016-02-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.c:
	Update reference of Unicode blocks to
	"Blocks-8.0.0.txt Date: 2014-11-10, 23:04:00 GMT [KW]".
	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
	uptex_version.h: upTeX version u1.21.
	* COPYRIGHT.utf8:
	Rename from COPYRIGHT.jis and convert encoding from ISO-2022-JP
	to UTF-8.

2015-09-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptriptest.test: Also check tripos.tex.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptriptest (removed): Renamed ...
	* uptriptest.test (new):  ... into this.
	* am/uptex.am: Better dependencies for 'make check'.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/uptex.am: Use $(tie_c) and $(tie_m).

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptrip/uptrip.diffs: Updated for TL 2015.

2014-12-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.c:
	Update reference of Unicode blocks to
	"Blocks-7.0.0.txt Date: 2014-04-03, 23:23:00 GMT [RP, KW]".
	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
	uptex_version.h: upTeX version u1.20.

2014-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptriptest: Complain early if trip.fmt is not created.
	Inspired by report from vvv, tlbuild 14 Jun 2011 10:25:47.

2014-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptrip/uptrip.diffs: Updated for TL14.

2014-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptrip/uptrip.diffs: Updated for upTeX 3.14159265.

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* uptex-m.ch: Adapt to TeX Version 3.14159265.
	* uppltotf.ch: Adapt to PLtoTF Version 3.6.
	* uptftopl.ch: Adapt to TFtoPL Version 3.3.
